deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: finance-app
      tier: frontend
  template:
    metadata:
      labels:
        app: finance-app
        tier: frontend
    spec:
      containers:
      - name: frontend-container
        image: alexcayoja-sys/finance-frontend:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
