service-backend-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance-backend-service
spec:
  selector:
    app: finance-app
    tier: backend
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
