service-db-internal.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance-db-service
spec:
  selector:
    app: finance-app
    tier: database
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP
