networkpolicy-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
spec:
  podSelector:
    matchLabels:
      app: finance-app
      tier: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: finance-app
          tier: frontend # Solo permite tráfico desde el Frontend
    - podSelector:
        matchLabels:
          app: finance-app
          tier: database # Puede ser necesario para health checks
    ports:
    - protocol: TCP
      port: 8080
